--- a/index.html
+++ b/index.html
@@ -3,38 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Willow Creek Dairy - Farm Fresh to You</title>
+    <title>Willow Creek Dairy - Premium Organic Milk</title>
     <style>
         :root {
-            --primary-color: #4CAF50; /* Organic Green */
-            --secondary-color: #FFC107; /* Golden Yellow/Cream */
-            --bg-light: #F9F9E0; /* Off-White/Creamy Background */
-            --text-dark: #2E4053; /* Dark Blue/Charcoal Text */
-            --font-stack: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            --primary-color: #0E2943; /* Deep Navy/Dark Blue */
+            --secondary-color: #E67E22; /* Dark Orange/Amber for CTA */
+            --text-light: #F8F8F8; /* Off-White Text */
+            --bg-main: #FFFFFF; /* Clean White Background */
+            --bg-accent: #F4F4F4; /* Light Grey Accent */
+            --font-stack: 'Helvetica Neue', Arial, sans-serif;
         }
 
         body {
             font-family: var(--font-stack);
             margin: 0;
             padding: 0;
-            background-color: var(--bg-light);
-            color: var(--text-dark);
+            background-color: var(--bg-main);
+            color: var(--primary-color);
             line-height: 1.6;
         }
 
+        /* Header & Navigation */
         header {
-            background-color: var(--primary-color);
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            background-color: var(--bg-main);
+            color: var(--primary-color);
+            padding: 15px 40px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid var(--bg-accent);
+        }
+
+        .logo {
+            font-size: 1.8em;
+            font-weight: 700;
+            color: var(--primary-color);
+            text-decoration: none;
         }
 
         nav a {
-            color: white;
+            color: var(--primary-color);
             text-decoration: none;
-            margin: 0 15px;
-            font-weight: bold;
+            margin-left: 30px;
+            font-weight: 500;
             transition: color 0.3s;
         }
 
@@ -42,117 +53,171 @@
             color: var(--secondary-color);
         }
 
+        /* Hero Section */
         .hero {
-            text-align: center;
-            padding: 60px 20px;
-            background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(''); /* AI Generated Image Placeholder */
-            background-size: cover;
-            background-position: center;
+            padding: 80px 40px;
+            background-color: var(--bg-accent);
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            text-align: left;
+            gap: 40px;
+        }
+
+        .hero-text {
+            max-width: 500px;
         }
 
         .hero h1 {
             color: var(--primary-color);
-            font-size: 3em;
-            margin-bottom: 10px;
+            font-size: 3.5em;
+            line-height: 1.1;
+            margin-bottom: 20px;
         }
 
         .hero p {
             font-size: 1.2em;
+            color: #555;
             margin-bottom: 30px;
+        }
+
+        .hero-image {
+            max-width: 45%;
+            min-width: 300px;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+            object-fit: cover;
+            /* Placeholder for AI Generated Image (e.g., premium milk bottle) */
         }
 
         .cta-button {
             display: inline-block;
             background-color: var(--secondary-color);
-            color: var(--text-dark);
-            padding: 12px 25px;
+            color: var(--text-light);
+            padding: 15px 30px;
             text-decoration: none;
             border-radius: 5px;
             font-weight: bold;
+            letter-spacing: 0.5px;
             transition: background-color 0.3s, transform 0.3s;
         }
 
         .cta-button:hover {
-            background-color: #FFD740;
-            transform: scale(1.05);
+            background-color: #D66C15;
+            transform: translateY(-2px);
         }
 
+        /* Feature Section */
         .features {
+            padding: 60px 40px;
+            text-align: center;
+        }
+
+        .features h2 {
+            color: var(--primary-color);
+            margin-bottom: 40px;
+        }
+
+        .feature-grid {
             display: flex;
             justify-content: space-around;
-            padding: 40px 20px;
-            text-align: center;
             flex-wrap: wrap;
+            gap: 30px;
         }
 
         .feature-item {
-            flex-basis: 30%;
-            min-width: 250px;
-            margin: 20px 0;
+            flex-basis: 280px;
+            padding: 20px;
+            border: 1px solid var(--bg-accent);
+            border-radius: 8px;
+            transition: box-shadow 0.3s;
+        }
+        
+        .feature-item:hover {
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
         }
 
         .feature-item h3 {
-            color: var(--primary-color);
+            color: var(--secondary-color);
         }
 
+        /* Footer */
         footer {
-            background-color: var(--text-dark);
-            color: white;
+            background-color: var(--primary-color);
+            color: var(--text-light);
             text-align: center;
-            padding: 20px 0;
+            padding: 30px 0;
             margin-top: 40px;
         }
 
         /* Responsiveness */
-        @media (max-width: 768px) {
-            .features {
+        @media (max-width: 900px) {
+            .hero {
                 flex-direction: column;
-                align-items: center;
+                text-align: center;
             }
-            .feature-item {
-                flex-basis: 90%;
+            .hero-image {
+                max-width: 80%;
+                margin-top: 30px;
             }
             .hero h1 {
                 font-size: 2.5em;
+            }
+            header {
+                flex-direction: column;
+            }
+            nav {
+                margin-top: 15px;
+            }
+            nav a {
+                margin: 0 10px;
             }
         }
     </style>
 </head>
 <body>
     <header>
+        <a href="index.html" class="logo">Willow Creek Dairy</a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="products.html">Products</a>
-            <a href="#">About</a>
+            <a href="products.html">Shop</a>
+            <a href="#">Our Farm</a>
             <a href="#">Contact</a>
         </nav>
     </header>
 
-    <div class="hero">
-        <h1>Welcome to Willow Creek Dairy</h1>
-        <p>Pure, Organic Goodness, Delivered Straight From Our Farm to Your Table.</p>
-         <a href="products.html" class="cta-button">Shop Our Farm Selection</a>
-    </div>
+    <main>
+        <div class="hero">
+            <div class="hero-text">
+                <h1>The Pure Taste of Organic Wellness</h1>
+                <p>From happy cows on lush pastures, we deliver premium, certified organic dairy products straight to your door. Experience the difference of true quality.</p>
+                <a href="products.html" class="cta-button">Explore Our Products</a>
+            </div>
+            <img class="hero-image" src="" alt="Premium Organic Milk Bottle">
+        </div>
 
-    <hr>
-
-    <div class="features">
-        <div class="feature-item">
-            <h3>🌱 Organic & Natural</h3>
-            <p>Our cows graze on lush, certified organic pastures year-round.</p>
-        </div>
-        <div class="feature-item">
-            <h3>📦 Local Delivery</h3>
-            <p>Freshly packed and delivered to your doorstep within hours of production.</p>
-        </div>
-        <div class="feature-item">
-            <h3>❤️ Happy Cows</h3>
-            <p>We prioritize the health and well-being of our herd for the best quality milk.</p>
-        </div>
-    </div>
+        <section class="features">
+            <h2>Why Choose Willow Creek?</h2>
+            <div class="feature-grid">
+                <div class="feature-item">
+                    <h3>✅ Certified Organic</h3>
+                    <p>No pesticides, no hormones. Just clean, natural goodness for your family.</p>
+                </div>
+                <div class="feature-item">
+                    <h3>🚚 Direct Delivery</h3>
+                    <p>We manage the cold chain from farm to fridge, ensuring maximum freshness.</p>
+                </div>
+                <div class="feature-item">
+                    <h3>🐄 Sustainable Farming</h3>
+                    <p>Committed to ethical animal welfare and environmental stewardship.</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer>
-        <p>&copy; 2025 Willow Creek Dairy. All Rights Reserved.</p>
+        <p>&copy; 2025 Willow Creek Dairy. Taste the difference of care.</p>
     </footer>
 </body>
 </html>
