--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Willow Creek Dairy - Premium Organic Milk</title>
+    <title>Vishnu's Naturals - Premium Organic Milk</title>
     <style>
         :root {
             --primary-color: #0E2943; /* Deep Navy/Dark Blue */
             --secondary-color: #E67E22; /* Dark Orange/Amber for CTA */
-            --text-light: #F8F8F8; /* Off-White Text */
-            --bg-main: #FFFFFF; /* Clean White Background */
-            --bg-accent: #F4F4F4; /* Light Grey Accent */
+            --text-light: #F8F8F8;
+            --bg-main: #FFFFFF;
+            --bg-accent: #F4F4F4;
             --font-stack: 'Helvetica Neue', Arial, sans-serif;
         }
 
@@ -84,11 +84,10 @@
         .hero-image {
             max-width: 45%;
             min-width: 300px;
-            height: auto;
+            height: 400px;
             border-radius: 10px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
             object-fit: cover;
-            /* Placeholder for AI Generated Image (e.g., premium milk bottle) */
         }
 
         .cta-button {
@@ -178,46 +177,46 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="logo">Willow Creek Dairy</a>
+        <a href="index.html" class="logo">Vishnu's Naturals</a>
         <nav>
             <a href="index.html">Home</a>
             <a href="products.html">Shop</a>
-            <a href="#">Our Farm</a>
-            <a href="#">Contact</a>
+            <a href="products.html">Our Farm</a>
+            <a href="products.html">Contact</a>
         </nav>
     </header>
 
     <main>
         <div class="hero">
             <div class="hero-text">
-                <h1>The Pure Taste of Organic Wellness</h1>
-                <p>From happy cows on lush pastures, we deliver premium, certified organic dairy products straight to your door. Experience the difference of true quality.</p>
+                <h1>The Pure Taste of Nature's Goodness</h1>
+                <p>From our ethical farms to your table, Vishnu's Naturals delivers premium, organic dairy products that are fresh, delicious, and responsibly sourced.</p>
                 <a href="products.html" class="cta-button">Explore Our Products</a>
             </div>
-            <img class="hero-image" src="" alt="Premium Organic Milk Bottle">
+            <img class="hero-image" src="https://i.imgur.com/GzB0Hh5.jpg" alt="Premium Organic Milk Bottle">
         </div>
 
         <section class="features">
-            <h2>Why Choose Willow Creek?</h2>
+            <h2>Why Choose Vishnu's Naturals?</h2>
             <div class="feature-grid">
                 <div class="feature-item">
-                    <h3>✅ Certified Organic</h3>
-                    <p>No pesticides, no hormones. Just clean, natural goodness for your family.</p>
+                    <h3>🌱 Certified Organic</h3>
+                    <p>Sustainably farmed with respect for the earth and our animals.</p>
                 </div>
                 <div class="feature-item">
-                    <h3>🚚 Direct Delivery</h3>
-                    <p>We manage the cold chain from farm to fridge, ensuring maximum freshness.</p>
+                    <h3>🧈 Richer Taste</h3>
+                    <p>Our products boast exceptional flavor, thanks to superior quality feed.</p>
                 </div>
                 <div class="feature-item">
-                    <h3>🐄 Sustainable Farming</h3>
-                    <p>Committed to ethical animal welfare and environmental stewardship.</p>
+                    <h3>📦 Fast Delivery</h3>
+                    <p>Freshness guaranteed with quick, temperature-controlled delivery.</p>
                 </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Willow Creek Dairy. Taste the difference of care.</p>
+        <p>&copy; 2025 Vishnu's Naturals. The purest form of dairy.</p>
     </footer>
 </body>
 </html>
