--- a/product.html
+++ b/product.html
@@ -326,7 +326,7 @@
                 <li><a href="index.html#about">About</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
                 <li class="cart-icon">
-                    <a href="payment.html">🛒 Cart</a>
+                    <a href="https://euphonious-lily-bbe195.netlify.app/payment">🛒 Cart</a>
                     <span class="cart-count" id="cartCount">0</span>
                 </li>
             </ul>
