--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li class="cart-icon">
-                    <a href="payment.html">🛒 Cart</a>
+                    <a href="https://euphonious-lily-bbe195.netlify.app/payment">🛒 Cart</a>
                     <span class="cart-count" id="cartCount">0</span>
                 </li>
             </ul>
@@ -629,7 +629,7 @@
                 <a href="index.html">Home</a>
                 <a href="products.html">Products</a>
                 <a href="#about">About Us</a>
-                <a href="payment.html">Cart</a>
+                <a href="https://euphonious-lily-bbe195.netlify.app/payment">Cart</a>
             </div>
             <div class="footer-section">
                 <h3>Customer Service</h3>
