--- a/product.html
+++ b/product.html
@@ -366,7 +366,7 @@
                 <a href="index.html">Home</a>
                 <a href="products.html">Products</a>
                 <a href="index.html#about">About Us</a>
-                <a href="payment.html">Cart</a>
+                <a href="https://euphonious-lily-bbe195.netlify.app/payment">Cart</a>
             </div>
             <div class="footer-section">
                 <h3>Customer Service</h3>
